TC-822 Prevent results from being cut off (#1203)
* Remove duplicate of taxonomy

* Add padding on small screens in order to not cut off the results

--- a/src/client/components/pages/lender-lookup-page/lender-lookup-page.scss
+++ b/src/client/components/pages/lender-lookup-page/lender-lookup-page.scss
@@ -87,6 +87,7 @@
   min-width: 321px;
   padding-bottom: 71px;
   @include grid-media($sba-grid-medium) {
+    padding-bottom: 0;
     position: absolute;
     pointer-events: all;
   }
