--- a/src/client/components/pages/office-lookup-page/office-lookup-page.scss
+++ b/src/client/components/pages/office-lookup-page/office-lookup-page.scss
@@ -103,7 +103,9 @@
 
 .resultContainer {
   width: 100%;
+  padding-bottom: 55px;
   @include grid-media($sba-grid-large) {
+    padding-bottom: 0;
     position: absolute;
     pointer-events: all;
   }
